# sdrrat

./: Cargo.toml  README.md
.claude/: settings.json
src/: main.rs
src/app/: db_range.rs  mod.rs  persist.rs  radio.rs  source.rs  vfo.rs
src/dsp/: command.rs  device_kind.rs  flowgraph.rs  mock.rs  mod.rs  silence.rs  sink.rs  tee.rs
src/ui/: mod.rs  spectrum.rs  status_bar.rs  theme.rs  util.rs  waterfall.rs
src/ui/header/: db_range.rs  mod.rs  vfo.rs
src/ui/popup/: help.rs  mod.rs  radio.rs  source.rs
