[package]
name = "sdrrat"
version = "0.1.0"
description = "discover the RF spectrum on your terminal"
authors = ["qewer <yerdemergul@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qewer33/sdrrat"
repository = "https://github.com/qewer33/sdrrat"
keywords = ["sdr", "radio", "tui", "ratatui", "futuresdr"]
categories = ["command-line-utilities", "hardware-support", "multimedia::audio"]
edition = "2024"
exclude = [
    "assets/**",
    ".github/**",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"
num-complex = "0.4"
rand = "0.9"
futuresdr = { version = "0.0.40", features = ["seify", "soapy", "audio"] }
confy = "0.6"
serde = { version = "1", features = ["derive"] }
libc = "0.2"
